--- a/app/src/main/res/layout/activity_choose_category.xml
+++ b/app/src/main/res/layout/activity_choose_category.xml
@@ -11,6 +11,7 @@
         android:id="@+id/recyclerViewCategory"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layoutAnimation="@anim/layout_animation"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="63dp" />
 
