--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,6 +15,9 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="16dp"
         android:text="Placeholder"
+        android:textAlignment="center"
+        android:gravity="center"
+
         android:background="#2C7B83"
         android:backgroundTintMode="add"
         android:textColor="@color/white"
