import von intellij

--- a/app/src/main/res/layout/rv_profile_grid_layout.xml
+++ b/app/src/main/res/layout/rv_profile_grid_layout.xml
@@ -7,13 +7,16 @@
     android:orientation="vertical"
     android:id="@+id/mainCategoryLayout">
 
+
+    <!--  Add "00" to a color to make opacity lower  -->
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="#2C7B83"
+        android:backgroundTint="#242424"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -29,7 +32,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:backgroundTint="#2C7B83"
+                android:backgroundTint="#242424"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
