--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:background="@drawable/mainmenubg"
     tools:context=".view.MainMenuActivity">
 
+
+
     <TextView
         android:id="@+id/gameTitle"
         android:layout_width="wrap_content"
@@ -28,7 +30,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:backgroundTint="#2C7B83"
+
         android:layoutAnimation="@anim/layout_animation"
+
         android:text="@string/SinglePlayerBtnText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,4 +67,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/multiplayerBtn"
         app:layout_constraintVertical_bias="0.297" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/FrameLayout"
+        android:name="com.example.quizz.fragments.LoginFragment"
+        android:layout_width="380dp"
+        android:layout_height="694dp"
+        android:layoutAnimation="@anim/layout_animation"
+        android:translationZ="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.486" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.935"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976"
+        app:srcCompat="@drawable/ic_baseline_close_24" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
