--- a/app/src/main/res/layout/fragment_chooseuser.xml
+++ b/app/src/main/res/layout/fragment_chooseuser.xml
@@ -6,23 +6,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/frag_layout"
+
+    android:background="@drawable/border_frag_profiles"
+
     >
 
 
     <androidx.recyclerview.widget.RecyclerView
+
         android:id="@+id/recyclerViewProfiles"
-        android:layout_width="326dp"
-        android:layout_height="540dp"
+        android:layout_width="280dp"
+        android:layout_height="510dp"
         android:layout_row="1"
         android:layout_column="0"
         android:layout_marginHorizontal="80dp"
         android:layoutAnimation="@anim/layout_animation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.303"
+        />
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -33,11 +38,11 @@
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.016"
-        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
+        app:layout_constraintVertical_bias="0.9"
+        app:srcCompat="@drawable/ic_baseline_add_circle_outline_24" />
 
     <FrameLayout
         android:id="@+id/child_fragment_addPlayer"
