--- a/app/src/main/res/layout/rv_bluetooth_device_grid_layout.xml
+++ b/app/src/main/res/layout/rv_bluetooth_device_grid_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/mainCategoryLayout">
+    android:id="@+id/btDeviceLayout">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -35,6 +35,30 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/btName"
+                android:layout_width="128dp"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:text="btName"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/profileIcon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/btAdress"
+                android:layout_width="129dp"
+                android:layout_height="66dp"
+                android:gravity="center"
+                android:text="btAdress"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/profileIcon"
+                app:layout_constraintTop_toTopOf="parent" />>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
