--- a/app/src/main/res/layout/fragment_child.xml
+++ b/app/src/main/res/layout/fragment_child.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.594" />
 
     <Button
-        android:id="@+id/enterButton"
+        android:id="@+id/submitPlayerBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add"
