--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -133,10 +133,20 @@
         android:text="save"
         app:layout_constraintBottom_toTopOf="@+id/singleplayerBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.613"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gameTitle"
-        app:layout_constraintVertical_bias="0.285" />
+        app:layout_constraintVertical_bias="0.178" />
+
+    <Button
+        android:id="@+id/resetStats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset saved"
+        app:layout_constraintBottom_toTopOf="@+id/singleplayerBtn"
+        app:layout_constraintEnd_toStartOf="@+id/saveStats"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
