--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -25,18 +25,52 @@
         app:layout_constraintTop_toBottomOf="@+id/playerIconView"
         app:layout_constraintVertical_bias="0.205" />
 
+    <EditText
+        android:id="@+id/playerChangeInputView"
+
+        android:visibility="gone"
+
+        android:layout_width="269dp"
+        android:layout_height="95dp"
+        android:gravity="center"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerIconView"
+        app:layout_constraintVertical_bias="0.205" />
+
     <ImageView
         android:id="@+id/playerIconView"
         android:layout_width="113dp"
         android:layout_height="119dp"
 
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.131"
+        app:layout_constraintVertical_bias="0.138"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageButton
+        android:id="@+id/changeNameBtn"
+        android:layout_width="34dp"
+        android:layout_height="36dp"
+        android:background="@drawable/round_button"
+
+        android:src="@drawable/ic_baseline_create_24"
+        android:text="Button"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.901"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.469" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
