--- a/app/src/main/res/layout/rv_profile_grid_layout.xml
+++ b/app/src/main/res/layout/rv_profile_grid_layout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/mainCategoryLayout">
+    android:id="@+id/mainCategoryLayout"
+    >
 
 
     <!--  Add "00" to a color to make opacity lower  -->
@@ -51,17 +52,32 @@
                 app:layout_constraintTop_toBottomOf="@+id/profileIcon" />
 
             <ImageButton
-                android:visibility="gone"
-                android:id="@+id/deletePlayerButton"
+                android:id="@+id/deletePlayerBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_button"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/profileIcon"
                 app:layout_constraintEnd_toEndOf="@+id/profileIcon"
+                app:layout_constraintHorizontal_bias="0.176"
                 app:layout_constraintStart_toStartOf="@+id/profileIcon"
                 app:layout_constraintTop_toTopOf="@+id/profileIcon"
                 app:layout_constraintVertical_bias="0.509"
                 app:srcCompat="@drawable/ic_baseline_close_24" />
+
+            <ImageButton
+                android:id="@+id/changePlayerBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round_button"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/profileIcon"
+                app:layout_constraintEnd_toEndOf="@+id/profileIcon"
+                app:layout_constraintHorizontal_bias="0.843"
+                app:layout_constraintStart_toStartOf="@+id/profileIcon"
+                app:layout_constraintTop_toTopOf="@+id/profileIcon"
+                app:layout_constraintVertical_bias="0.509"
+                app:srcCompat="@drawable/ic_baseline_create_24" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
