--- a/app/src/main/res/layout/rv_addplayer_grid_layout.xml
+++ b/app/src/main/res/layout/rv_addplayer_grid_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/mainCategoryLayout">
+    android:id="@+id/mainPlayerLayout">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
 
-        android:background="@drawable/item_selector"
+        android:background="@drawable/item_selector_chooseicon"
 
         android:backgroundTint="#2C7B83"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,9 +28,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/profileIcon"
-
-
+                android:id="@+id/fixProfileIcon"
 
                 android:layout_width="75dp"
                 android:layout_height="75dp"
